@@ -46,7 +46,6 @@ int bam_fillmd(int argc, char *argv[]);
 int bam_idxstats(int argc, char *argv[]);
 int bam_markdup(int argc, char *argv[]);
 int main_samview(int argc, char *argv[]);
-int main_import(int argc, char *argv[]);
 int main_reheader(int argc, char *argv[]);
 int main_cut_target(int argc, char *argv[]);
 int main_phase(int argc, char *argv[]);
@@ -137,6 +136,11 @@ static void usage(FILE *fp)
 int _CRT_glob = 0;
 #endif
 
+static void bam_import_err(void) {
+    fprintf(stderr, "[main] \"samtools import\" has been removed. "
+            "Please use \"samtools view\" instead.\n");
+}
+
 int main(int argc, char *argv[])
 {
 #ifdef _WIN32
@@ -157,7 +161,7 @@ int main(int argc, char *argv[])
 
     int ret = 0;
     if (strcmp(argv[1], "view") == 0)           ret = main_samview(argc-1, argv+1);
-    else if (strcmp(argv[1], "import") == 0)    ret = main_import(argc-1, argv+1);
+    else if (strcmp(argv[1], "import") == 0)    { bam_import_err(); return 1; }
     else if (strcmp(argv[1], "mpileup") == 0)   ret = bam_mpileup(argc-1, argv+1);
     else if (strcmp(argv[1], "merge") == 0)     ret = bam_merge(argc-1, argv+1);
     else if (strcmp(argv[1], "sort") == 0)      ret = bam_sort(argc-1, argv+1);
